@@ -9,7 +9,12 @@ User visible changes:
     elaborating their definitions
 * Implicit arguments will be added automatically only if their initial
   letter is lower case, or they are in a using declaration
+* Pattern matching on strings, big integers and characters
 * Added System.Concurrency modules
+
+Internal changes:
+
+* Separate inlining methods at compile-time and run-time
 
 New in 0.9.5:
 -------------
